--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="maps_key">AIzaSyCAn7hLkQZ6yXwfkvCRzFXc7cE0XSJuNgU</string>
     <string name="google_app_id">29427722334</string>
     <string name="link"><a href="http://www.google.com">Google</a></string>
+
+    <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
