--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="maps_key">AIzaSyCAn7hLkQZ6yXwfkvCRzFXc7cE0XSJuNgU</string>
     <string name="google_app_id">29427722334</string>
     <string name="link"><a href="http://www.google.com">Google</a></string>
+    <string name="google_maps_key">AIzaSyAsjMeWqmQllGX7uDb3qoa8HSB2x6sCpT4</string>
 
     <string name="title_activity_splash_screen">SplashScreen</string>
     <string name="dummy_button">Dummy Button</string>
