--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="title_activity_maps">Oslofjorden</string>
     <string name="google_app_id">29427722334</string>
+    <string name="kyststier">Kyststier</string>
+    <string name="badeplasser">Badeplasser</string>
+    <string name="b_tramper">Båtramper</string>
+    <string name="butikk">Butikk</string>
+    <string name="spisesteder">Spisesteder</string>
+    <string name="fyr">Fyr</string>
 
 </resources>
