lots of refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="skru_p_posisjon">Skru på posisjon</string>
     <string name="vi_setter_pris_p_om_du_vil_st_tte_oslofjorden_com_og_dermed_fjerne_reklamen">Vi setter pris på om du vil støtte oslofjorden.com og dermed fjerne reklamen.</string>
     <string name="kj_p">Kjøp</string>
+    <string name="app_name">Oslofjorden Båt og Turguide</string>
 
 </resources>
