--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="user_cancelled">User cancelled</string>
     <string name="item_not_owned">Item not owned</string>
     <string name="service_unavailable">Service unavailable</string>
+    <string name="bottom_sheet_loading_data">Oslofjorden laster inn - vennligst vent…</string>
 </resources>
