--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="privacy_policy_description">Vi samler inn data for å gi deg en best mulig
         app.</string>
     <string name="privacy_policy">Personvernserklæring</string>
+    <string name="privacy_policy_checkbox">Ikke vis igjen</string>
 </resources>
